Using modern Java APIs