@@ -142,7 +142,7 @@ public class DelimitedMarshallingContext extends MarshallingContext {
         }
         
         public int compareTo(Entry o) {
-            return new Integer(this.order).compareTo(o.order);
+            return Integer.valueOf(this.order).compareTo(o.order);
         }
         
         @Override
