@@ -53,7 +53,7 @@ public class TargetTest extends ParserTest {
         assertEquals("N,,kev,kevo", marshaller.marshal(list).toString());
         
         Integer age = (Integer) unmarshaller.unmarshal("A,jen,28");
-        assertEquals(new Integer(28), age);
+        assertEquals(Integer.valueOf(28), age);
         assertEquals("A,unknown,28", marshaller.marshal(age).toString());
     }
     
